fixing nav z-index

--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ header {
     display: grid;
     grid-template-columns: 30% 70%;
     grid-template-rows: 100%;
-    z-index: 2;
+    z-index: 3;
 }
 
 .open-menu-icon {
